--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -10,7 +10,9 @@
         android:layout_width="fill_parent"
         android:layout_height="55dp"
         android:background="@color/PrimaryColor"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
         <Button
             android:id="@+id/btn_back"
