--- a/app/src/main/res/layout/page_01.xml
+++ b/app/src/main/res/layout/page_01.xml
@@ -20,7 +20,17 @@
             android:textColor="#ffffff"
             android:textSize="@dimen/NavigationTittleSize"/>
     </RelativeLayout>
+    <ScrollView
+        android:layout_below="@id/rl_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="1000dp"
+    android:orientation="vertical"
+
+    >
     <RelativeLayout
         android:id="@+id/test_area"
         android:layout_width="fill_parent"
@@ -33,7 +43,7 @@
             android:id="@+id/friend_search_bar"
             android:layout_width="300dp"
             android:layout_height="35dp"
-            android:paddingLeft="65dp"
+            android:paddingLeft="45dp"
             android:paddingRight="5dp"
             android:layout_centerInParent="true"
             android:layout_marginTop="40dp"
@@ -42,14 +52,15 @@
             android:textSize="@dimen/TextTextSize"
             android:background="@drawable/icon_search_push"/>
     </RelativeLayout>
-
     <ListView
         android:id="@+id/listview"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="800dp"
         android:background="@color/white"
         android:layout_below="@id/test_area">
 
     </ListView>
 
+</LinearLayout>
+    </ScrollView>
 </RelativeLayout>
