--- a/app/src/main/res/layout/activity_register2.xml
+++ b/app/src/main/res/layout/activity_register2.xml
@@ -11,52 +11,50 @@
         android:layout_height="55dp"
         android:background="@color/PrimaryColor"
         android:orientation="vertical">
-
+        <ImageView
+            android:layout_centerVertical="true"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/back_white"
+            />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="登录"
+            android:text="注册"
+            android:layout_centerVertical="true"
             android:textColor="#ffffff"
             android:textSize="@dimen/NavigationTittleSize"/>
     </RelativeLayout>
-    <ImageView
-        android:layout_marginTop="40dp"
-        android:layout_gravity="center"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:background="@mipmap/ic_launcher"
-        />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="40dp"
         >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:orientation="horizontal"
             android:layout_gravity="center"
-           android:gravity="center"
+            android:gravity="center"
             >
 
             <EditText
-                android:textSize="@dimen/TextTextSize"
-                android:drawableLeft="@drawable/user"
-                android:drawablePadding="5dp"
+                android:textColorHint="@color/TextColor"
                 android:id="@+id/accountEt"
+                android:textSize="@dimen/TextTextSize"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:hint="途聆名/手机号"
-                android:textColorHint="@color/TextColor"
                 android:layout_marginLeft="5dp"
-
+                android:layout_weight="1"
                 android:background="@null"
-                />
+                android:drawableLeft="@drawable/user"
+                android:drawablePadding="5dp"
+                android:hint="请输入手机号" />
         </LinearLayout>
         <ImageView
             android:layout_width="match_parent"
@@ -81,7 +79,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:hint="密码"
+                android:hint="请输入密码"
                 android:background="@null"
                 android:layout_marginLeft="5dp"
 
@@ -92,32 +90,46 @@
             android:layout_height="1dp"
             android:background="@color/darkGrey"
             />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginRight="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="15dp"
-        >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="注册用户"
-            android:onClick="register"
-            />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:orientation="horizontal"
+            android:layout_gravity="center"
+            android:gravity="center"
+            >
+
+            <EditText
+                android:textColorHint="@color/TextColor"
+                android:textSize="@dimen/TextTextSize"
+                android:drawablePadding="5dp"
+                android:drawableLeft="@drawable/securitycode"
+                android:id="@+id/securitycode"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:hint="请输入手机验证码"
+                android:background="@null"
+                android:layout_marginLeft="5dp"
+                />
+            <ImageView
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:background="@color/darkgray"
+                android:layout_margin="10dp"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="发送验证码"
+                />
+        </LinearLayout>
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="忘记密码"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/darkGrey"
             />
     </LinearLayout>
+
     <Button
         android:id="@+id/subBtn"
         android:layout_marginTop="20dp"
@@ -128,7 +140,7 @@
         android:layout_gravity="center"
         android:textColor="@color/white"
         android:onClick="subMit"
-        android:text="登录"
+        android:text="注册"
         android:background="@drawable/rec_bg_blue_unpress"
         />
     <TextView
@@ -140,20 +152,35 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_gravity="center"
         android:gravity="center"
+        android:layout_alignParentBottom="true"
         android:layout_marginBottom="20dp"
         >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="游客登录"
-            />
-        <Button
-            android:layout_marginLeft="10dp"
+        <CheckBox
+            android:layout_marginRight="10dp"
+            android:id="@+id/agreeProtocol"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:background="@drawable/go"
+            android:button="@null"
+            android:background="@drawable/checkbox_circle"
+            android:layout_gravity="center_vertical"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="@string/agree_protocol"
+            android:gravity="center_vertical"/>
+        <TextView
+            android:layout_width="10dp"
+            android:layout_height="wrap_content"
+
             />
+        <TextView
+            android:onClick="checkServiceItems"
+            android:clickable="true"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="@string/service_items"
+            android:textColor="@color/colorIconBlue"
+            android:gravity="center_vertical"/>
     </LinearLayout>
 </LinearLayout>
