--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -47,7 +47,7 @@
                 android:textSize="@dimen/TextTextSize"
                 android:drawableLeft="@drawable/user"
                 android:drawablePadding="5dp"
-                android:id="@+id/accountEt"
+                android:id="@+id/user_account"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -77,7 +77,7 @@
                 android:drawablePadding="5dp"
                 android:drawableLeft="@drawable/password"
                 android:drawableRight="@drawable/seepwd"
-                android:id="@+id/pwdEt"
+                android:id="@+id/user_pass"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -102,6 +102,7 @@
         android:layout_marginTop="15dp"
         >
         <TextView
+            android:id="@+id/go_register"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="注册用户"
@@ -119,7 +120,7 @@
             />
     </LinearLayout>
     <Button
-        android:id="@+id/subBtn"
+        android:id="@+id/loginButton"
         android:layout_marginTop="20dp"
         android:layout_marginRight="90dp"
         android:layout_marginLeft="90dp"
