--- a/app/src/main/res/layout/activity_register2.xml
+++ b/app/src/main/res/layout/activity_register2.xml
@@ -53,7 +53,7 @@
                 android:layout_marginLeft="5dp"
                 android:layout_weight="1"
                 android:background="@null"
-                android:drawableLeft="@drawable/jihouma"
+                android:drawableLeft="@drawable/jihouma2"
                 android:drawablePadding="5dp"
                 android:hint="请输入激活码" />
         </LinearLayout>
