--- a/app/src/main/res/layout/chatting_item_msg_text_left.xml
+++ b/app/src/main/res/layout/chatting_item_msg_text_left.xml
@@ -38,7 +38,7 @@
         <TextView
             android:id="@+id/tv_chatcontent"
             style="@style/chat_content_date_style"
-            android:layout_width="150dp"
+            android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@id/iv_userhead"
