--- a/app/src/main/res/drawable/chatfrom_bg.xml
+++ b/app/src/main/res/drawable/chatfrom_bg.xml
@@ -4,5 +4,5 @@
     <item android:state_focused="true" android:drawable="@drawable/chatfrom_bg_focused" />
     <item android:state_pressed="true" android:drawable="@drawable/chatfrom_bg_pressed" />
     <item android:state_selected="true" android:drawable="@drawable/chatfrom_bg_focused" />
-    <item android:drawable="@drawable/chatfrom_bg_normal" />
+    <item android:drawable="@drawable/message3" />
 </selector>
