--- a/app/src/main/res/layout-port/fragment_talk.xml
+++ b/app/src/main/res/layout-port/fragment_talk.xml
@@ -92,7 +92,7 @@
 	        android:id="@+id/ptt_button"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:text="@+string/talk"
+	        android:text=""
 	        android:background="@drawable/ptt_button"
 	        android:textOff=""
 	        android:textOn=""
