--- a/app/src/main/res/layout/activity_new_chat_group.xml
+++ b/app/src/main/res/layout/activity_new_chat_group.xml
@@ -55,14 +55,15 @@
             android:id="@+id/friend_search_bar"
             android:layout_width="300dp"
             android:layout_height="35dp"
-            android:paddingLeft="65dp"
+            android:paddingLeft="15dp"
             android:paddingRight="5dp"
             android:layout_centerInParent="true"
             android:layout_marginTop="40dp"
             android:hint="搜索"
             android:textColor="@color/TittleColor"
             android:textSize="@dimen/TextTextSize"
-            android:background="@drawable/icon_search_push"/>
+            android:drawableLeft="@drawable/search"
+            android:background="@drawable/icon_search_push2"/>
     </RelativeLayout>
 
     <ScrollView
