--- a/app/src/main/res/layout/chatting_item_msg_text_right.xml
+++ b/app/src/main/res/layout/chatting_item_msg_text_right.xml
@@ -47,7 +47,7 @@
             android:gravity="left|center"
             android:lineSpacingExtra="2dp"
             android:minHeight="50dp"
-            android:textColor="@color/TittleColor"
+            android:textColor="@color/white"
             android:textSize="@dimen/TittleTextSize" />
 
         <TextView
