--- a/app/src/main/res/layout/page_01.xml
+++ b/app/src/main/res/layout/page_01.xml
@@ -40,17 +40,19 @@
         android:layout_marginBottom="5dp">
 
         <EditText
+            android:layout_marginLeft="60dp"
+            android:layout_marginRight="60dp"
             android:id="@+id/friend_search_bar"
-            android:layout_width="300dp"
+            android:layout_width="match_parent"
             android:layout_height="35dp"
-            android:paddingLeft="45dp"
-            android:paddingRight="5dp"
+            android:paddingLeft="15dp"
             android:layout_centerInParent="true"
             android:layout_marginTop="40dp"
             android:hint="搜索"
             android:textColor="@color/TittleColor"
             android:textSize="@dimen/TextTextSize"
-            android:background="@drawable/icon_search_push"/>
+            android:drawableLeft="@drawable/search"
+            android:background="@drawable/icon_search_push2"/>
     </RelativeLayout>
     <ListView
         android:id="@+id/listview"
