--- a/app/src/main/res/layout/chatting_item_msg_text_left.xml
+++ b/app/src/main/res/layout/chatting_item_msg_text_left.xml
@@ -49,12 +49,13 @@
         <TextView
             android:id="@+id/tv_chatcontent"
             android:layout_width="150dp"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_marginLeft="15dp"
             android:text="textview"
             android:textColor="@color/TittleColor"
             android:layout_gravity="center_vertical"
-            android:background="@drawable/chatfrom_bg"
+            android:gravity="center_vertical"
+            android:background="@mipmap/dialogleft"
             android:paddingLeft="15dp"
             android:textSize="@dimen/TittleTextSize"
             />
