--- a/app/src/main/res/layout/chatting_item_msg_text_right.xml
+++ b/app/src/main/res/layout/chatting_item_msg_text_right.xml
@@ -37,16 +37,18 @@
 
         <TextView
             android:id="@+id/tv_chatcontent"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
+            android:layout_width="150dp"
+            android:layout_height="40dp"
+            android:paddingLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_toLeftOf="@id/iv_userhead"
-            android:background="@drawable/chatto_bg"
+            android:background="@mipmap/dialogright"
             android:clickable="true"
             android:focusable="true"
             android:gravity="left|center"
             android:lineSpacingExtra="2dp"
             android:minHeight="50dp"
+            android:text="textview"
             android:textColor="@color/white"
             android:textSize="@dimen/TittleTextSize" />
 
