--- a/app/src/main/res/layout/item_tra_book.xml
+++ b/app/src/main/res/layout/item_tra_book.xml
@@ -2,12 +2,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
+
                 android:background="@drawable/select_btn"
                 android:layout_marginTop="10dp">
 
-    <ImageView
+    <com.example.tr.tourhear.view.CircleImageView
         android:id="@+id/image"
         android:layout_width="50dp"
         android:layout_height="50dp"
@@ -48,11 +47,12 @@
 
     <ImageView
         android:id="@+id/picture"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_below="@id/image"
-        android:layout_margin="5dp"
-        android:background="@drawable/timg"/>
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:background="@mipmap/jingdian_jiuzai1"/>
 
     <TextView
         android:id="@+id/tittle"
@@ -71,6 +71,7 @@
         android:layout_below="@+id/tittle"
         android:orientation="horizontal"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
         android:layout_marginLeft="5dp">
 
         <LinearLayout
@@ -78,13 +79,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:gravity="center_vertical"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/image_collect"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:src="@drawable/icon_pulldown"/>
+                android:src="@drawable/jingdian_like"/>
 
             <TextView
                 android:id="@+id/text_collect"
@@ -95,20 +97,25 @@
                 android:textColor="@color/TextColor"
                 android:textSize="@dimen/TextTextSize"/>
         </LinearLayout>
-
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            />
         <LinearLayout
             android:id="@+id/like"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/picture"
             android:layout_weight="1"
+            android:gravity="center_vertical"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/image_like"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:src="@drawable/icon_pulldown"/>
+                android:src="@drawable/jingdian_collect"/>
 
             <TextView
                 android:id="@+id/text_like"
@@ -119,19 +126,25 @@
                 android:textColor="@color/TextColor"
                 android:textSize="@dimen/TextTextSize"/>
         </LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            />
         <LinearLayout
             android:id="@+id/comment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/picture"
             android:layout_weight="1"
+            android:gravity="center_vertical"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/image_comment"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:src="@drawable/icon_pulldown"/>
+                android:src="@drawable/jingdian_look"/>
 
             <TextView
                 android:id="@+id/text_comment"
@@ -142,19 +155,26 @@
                 android:textColor="@color/TextColor"
                 android:textSize="@dimen/TextTextSize"/>
         </LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            />
         <LinearLayout
             android:id="@+id/forward"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/picture"
             android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:layout_gravity="center"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/image_forward"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:src="@drawable/icon_pulldown"/>
+                android:src="@drawable/jingdian_resend2"/>
 
             <TextView
                 android:id="@+id/text_forward"
