--- a/app/src/main/res/layout/page_03.xml
+++ b/app/src/main/res/layout/page_03.xml
@@ -31,9 +31,9 @@
     <RelativeLayout
         android:id="@+id/tittle_high"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="180dp"
         android:layout_alignParentStart="true"
-        android:background="@drawable/test_backpicture">
+        android:background="@mipmap/chengdu1">
 
         <TextView
             android:id="@+id/tittle_name"
@@ -55,20 +55,20 @@
 
         <EditText
             android:id="@+id/tittle_search_bar"
-            android:layout_width="300dp"
+            android:layout_width="260dp"
             android:layout_height="35dp"
-            android:paddingLeft="40dp"
+            android:paddingLeft="10dp"
             android:paddingRight="5dp"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
-            android:layout_below="@id/tittle_name"
             android:layout_centerInParent="true"
+            android:layout_centerHorizontal="true"
             android:layout_marginBottom="10dp"
-            android:layout_marginTop="40dp"
             android:hint="搜索"
             android:textColor="@color/TittleColor"
             android:textSize="@dimen/TextTextSize"
-            android:background="@drawable/icon_search_push"/>
+            android:drawableLeft="@drawable/search"
+            android:background="@drawable/icon_searchinput"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -91,8 +91,8 @@
         </RelativeLayout>
     </ScrollView>
     <ImageButton
-        android:layout_width="65dp"
-        android:layout_height="65dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:background="@drawable/icon_more"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
