--- a/app/src/main/res/layout/car_dispatch.xml
+++ b/app/src/main/res/layout/car_dispatch.xml
@@ -66,7 +66,6 @@
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:background="@drawable/setting"
                 android:gravity="center"
-                android:onClick="setting"
                 android:textColor="#ffffff"
                 android:textSize="16sp"/>
         </LinearLayout>
@@ -286,7 +285,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
-                android:text="禁麦"
+                android:text="单呼"
                 android:textColor="@color/white"
                 android:textSize="@dimen/TittleTextSize"/>
         </RelativeLayout>
