--- a/app/src/main/res/layout/person_select.xml
+++ b/app/src/main/res/layout/person_select.xml
@@ -33,7 +33,7 @@
             android:textSize="16sp"/>
 
         <Button
-            android:id="@+id/btn_more"
+            android:id="@+id/btn_yes"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_centerVertical="true"
